--- a/index.html
+++ b/index.html
@@ -14,52 +14,71 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f0f0f, #1f1f2f);
-      color: #fff;
-      min-height: 100vh;
+      background: #111;
+      color: #f5f5f5;
       overflow-x: hidden;
     }
 
     .hero {
       position: relative;
-      padding: 4rem 2rem;
+      min-height: 100vh;
+      background: url('https://raw.githubusercontent.com/nixy-pro/testinga/refs/heads/main/freelance.jpg') center/cover no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      overflow: hidden;
+      padding: 2rem;
     }
 
-    .hero h1 {
-      font-size: 2.5rem;
-      z-index: 2;
-      position: relative;
-    }
-
-    .hero p {
-      margin-top: 0.5rem;
-      font-size: 1.1rem;
-      color: #bbb;
-      z-index: 2;
-      position: relative;
-    }
-
-    .background-logo {
-      content: "JOB FREELANCE";
+    .hero::after {
+      content: '';
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 10rem;
-      font-weight: bold;
-      color: rgba(0, 255, 255, 0.05);
-      filter: blur(4px);
-      white-space: nowrap;
-      pointer-events: none;
-      z-index: 0;
-      animation: shine 6s linear infinite;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      backdrop-filter: blur(2px);
+      z-index: 1;
     }
 
-    @keyframes shine {
-      0% { transform: translate(-50%, -50%) rotate(0deg); }
-      100% { transform: translate(-50%, -50%) rotate(360deg); }
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      color: #e0c788;
+      text-shadow: 0 0 5px #000;
+    }
+
+    .hero-content h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    .hero-content p {
+      font-size: 1.1rem;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .promo {
+      background: #1b1b1b;
+      padding: 2rem 1rem;
+      color: #d4af37;
+      text-align: center;
+    }
+
+    .promo h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .promo ul {
+      list-style: disc;
+      padding-left: 1.5rem;
+      text-align: left;
+      max-width: 600px;
+      margin: 0 auto;
+      font-size: 1rem;
     }
 
     .cards {
@@ -67,29 +86,28 @@
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
       padding: 2rem;
-      max-width: 1200px;
-      margin: 0 auto;
+      background: #111;
     }
 
     .card {
       background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.08);
       border-radius: 16px;
-      padding: 2rem;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 20px rgba(0,255,255,0.05);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      padding: 1.5rem;
+      backdrop-filter: blur(6px);
+      box-shadow: 0 0 20px rgba(212, 175, 55, 0.08);
+      transition: 0.3s;
     }
 
     .card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 0 40px rgba(0,255,255,0.2);
+      transform: translateY(-5px);
+      box-shadow: 0 0 30px rgba(212, 175, 55, 0.2);
     }
 
     .card h2 {
-      color: #0ff;
+      color: #ffd700;
       margin-bottom: 0.5rem;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
     }
 
     .card p {
@@ -100,43 +118,47 @@
 
     .card a {
       text-decoration: none;
-      color: #0ff;
+      color: #ffd700;
       font-weight: bold;
-      border-bottom: 1px solid transparent;
-      transition: all 0.3s ease;
-    }
-
-    .card a:hover {
-      border-color: #0ff;
     }
 
     footer {
       text-align: center;
       padding: 2rem;
+      background: #000;
       font-size: 0.9rem;
-      color: #888;
+      color: #777;
     }
 
     @media (max-width: 600px) {
-      .background-logo {
-        font-size: 4rem;
+      .hero-content h1 {
+        font-size: 2rem;
       }
 
-      .hero h1 {
-        font-size: 1.8rem;
-      }
-
-      .hero p {
+      .hero-content p {
         font-size: 1rem;
+      }
+
+      .promo h2 {
+        font-size: 1.2rem;
       }
     }
   </style>
 </head>
 <body>
   <section class="hero">
-    <div class="background-logo">JOB FREELANCE</div>
-    <h1>CTC Freelance Files</h1>
-    <p>Temukan file kreatif & profesional untuk kebutuhanmu!</p>
+    <div class="hero-content">
+      <h1>JOB FREELANCE</h1>
+      <p>Temukan file kreatif & profesional untuk kebutuhanmu! Kerja santai bisa di mana aja.</p>
+    </div>
+  </section>
+
+  <section class="promo">
+    <h2>Keuntungan Job Freelance:</h2>
+    <ul>
+      <li>Dibayar per-hari Rp20.000 sampai Rp100.000 bahkan bisa lebih tergantung skill masing-masing.</li>
+      <li>Kerja santai cuma main HP dapat cuan, cocok juga untuk kerja sampingan.</li>
+    </ul>
   </section>
 
   <section class="cards">
@@ -158,9 +180,7 @@
   </section>
 
   <footer>
-    © 2025 JOB FREELANCE — Dibuat dengan semangat & kopi ☕
+    © 2025 JOB FREELANCE — Dibuat oleh tim kreatif dengan kopi & niat 💻☕
   </footer>
 </body>
 </html>
-
-
