--- a/index.html
+++ b/index.html
@@ -1,114 +1,121 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JOB FREELANCE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
       font-family: 'Inter', sans-serif;
-      background-color: #0a0a0a;
-      color: #fff;
+      background-color: #090D10;
+      color: #D4AF37;
     }
-
-    .hero-image {
+    .hero {
       width: 100%;
-      max-height: 500px;
-      overflow: hidden;
     }
-
-    .hero-image img {
+    .hero img {
       width: 100%;
       height: auto;
       display: block;
     }
-
     .cards {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1.5rem;
       padding: 2rem 1rem;
+      gap: 1.5rem;
     }
-
     .card {
-      background: rgba(255, 255, 255, 0.04);
+      background-color: rgba(255, 255, 255, 0.03);
       border: 1px solid rgba(255, 255, 255, 0.08);
-      border-radius: 16px;
-      padding: 1.5rem 1.2rem;
-      backdrop-filter: blur(8px);
-      box-shadow: 0 0 20px rgba(255, 217, 0, 0.05);
-      max-width: 90%;
+      padding: 1.5rem;
+      border-radius: 1rem;
       width: 100%;
+      max-width: 360px;
       text-align: center;
+      transition: all 0.3s ease;
     }
-
     .card h2 {
-      color: #ffd700;
+      font-size: 1.2rem;
+      color: #D4AF37;
       margin-bottom: 0.5rem;
-      font-size: 1.3rem;
     }
-
     .card p {
-      font-size: 0.95rem;
       color: #ccc;
+      font-size: 0.95rem;
       margin-bottom: 1rem;
     }
-
     .card a {
-      text-decoration: none;
-      color: #ffd700;
+      display: inline-block;
+      color: #FFD700;
       font-weight: bold;
-      border-bottom: 1px solid transparent;
-      transition: 0.3s ease;
+      text-decoration: none;
+      cursor: pointer;
     }
-
-    .card a:hover {
-      border-color: #ffd700;
+    .card .details {
+      display: none;
+      margin-top: 1rem;
+      color: #aaa;
+      font-size: 0.85rem;
+      animation: fadeIn 0.3s ease-in-out;
     }
-
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
     footer {
       text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #777;
+      font-size: 0.8rem;
+      color: #555;
+      padding: 2rem 1rem;
     }
   </style>
 </head>
 <body>
-  <!-- Gambar Thumbnail -->
-  <div class="hero-image">
-    <img src="https://raw.githubusercontent.com/nixy-pro/testinga/refs/heads/main/freelance.jpg" alt="Job Freelance Thumbnail">
+  <div class="hero">
+    <img src="freelance.jpg" alt="Job Freelance Banner" />
   </div>
 
-  <!-- Kartu File -->
   <section class="cards">
     <div class="card">
       <h2>CTC Design 01</h2>
       <p>Template modern dan siap pakai.</p>
-      <a href="#">Lihat File</a>
+      <a onclick="toggleDetail(0)">Lihat File</a>
+      <div class="details">📁 File: CTC Design 01<br/>Format: PPTX<br/>Ukuran: 1.2 MB<br/>Status: Gratis digunakan</div>
     </div>
     <div class="card">
       <h2>CTC Pitchdeck</h2>
       <p>Presentasi menarik untuk klien freelance.</p>
-      <a href="#">Lihat File</a>
+      <a onclick="toggleDetail(1)">Lihat File</a>
+      <div class="details">📁 File: CTC Pitchdeck<br/>Format: PDF<br/>Ukuran: 850 KB<br/>Status: Premium sample</div>
     </div>
     <div class="card">
       <h2>CTC CV Kreatif</h2>
       <p>Resume interaktif yang menonjol dan profesional.</p>
-      <a href="#">Lihat File</a>
+      <a onclick="toggleDetail(2)">Lihat File</a>
+      <div class="details">📁 File: CTC CV Kreatif<br/>Format: DOCX<br/>Ukuran: 400 KB<br/>Status: Siap edit</div>
     </div>
   </section>
 
   <footer>
     © 2025 JOB FREELANCE — Dibuat dengan semangat & kopi ☕
   </footer>
+
+  <script>
+    function toggleDetail(index) {
+      const details = document.querySelectorAll('.details');
+      details.forEach((el, i) => {
+        if (i === index) {
+          el.style.display = el.style.display === 'block' ? 'none' : 'block';
+        } else {
+          el.style.display = 'none';
+        }
+      });
+    }
+  </script>
 </body>
 </html>
