--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -13,9 +12,6 @@
       font-family: 'Inter', sans-serif;
       background-color: #090D10;
       color: #D4AF37;
-    }
-    .hero {
-      width: 100%;
     }
     .hero img {
       width: 100%;
@@ -32,12 +28,12 @@
     .card {
       background-color: rgba(255, 255, 255, 0.03);
       border: 1px solid rgba(255, 255, 255, 0.08);
-      padding: 1.5rem;
+      padding: 2rem 1.5rem;
       border-radius: 1rem;
-      width: 100%;
+      width: calc(100% - 2rem);
       max-width: 360px;
       text-align: center;
-      transition: all 0.3s ease;
+      box-sizing: border-box;
     }
     .card h2 {
       font-size: 1.2rem;
@@ -109,11 +105,7 @@
     function toggleDetail(index) {
       const details = document.querySelectorAll('.details');
       details.forEach((el, i) => {
-        if (i === index) {
-          el.style.display = el.style.display === 'block' ? 'none' : 'block';
-        } else {
-          el.style.display = 'none';
-        }
+        el.style.display = i === index ? (el.style.display === 'block' ? 'none' : 'block') : 'none';
       });
     }
   </script>
