--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #090D10;
+      background-color: #0A0A0A;
       color: #D4AF37;
     }
     .hero img {
@@ -69,12 +69,51 @@
       color: #555;
       padding: 2rem 1rem;
     }
+    
+    .contact-wrapper {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.contact-button {
+  display: inline-block;
+  background-color: #D4AF37;
+  color: #000;
+  padding: 12px 24px;
+  border-radius: 999px;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  box-shadow: 0 0 15px rgba(212, 175, 55, 0.3);
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  user-select: none;
+  border: none;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+}
+.contact-button:hover {
+  transform: scale(1.05);
+}
+.contact-button:focus,
+.contact-button:active {
+  outline: none;
+  box-shadow: none;
+}
+
+
   </style>
 </head>
 <body>
   <div class="hero">
     <img src="freelance.jpg" alt="Job Freelance Banner" />
   </div>
+<div class="contact-wrapper">
+  <div class="contact-button" onclick="window.open('https://wa.me/6281234567890', '_blank')">
+    ☎️ Hubungi Kami
+  </div>
+</div>
+
 
   <section class="cards">
     <div class="card">
