--- a/index.html
+++ b/index.html
@@ -4,19 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JOB FREELANCE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #0A0A0A;
+      background-color: #1E1D1B;
       color: #D4AF37;
     }
     .hero img {
       width: 100%;
       height: auto;
       display: block;
+    }
+    .contact-wrapper {
+      text-align: center;
+      margin-top: 1rem;
+    }
+    .contact-button {
+      display: inline-block;
+      background-color: #D4AF37;
+      color: #000;
+      padding: 12px 24px;
+      border-radius: 999px;
+      font-weight: bold;
+      font-family: 'Poppins', sans-serif;
+      box-shadow: 0 0 15px rgba(212, 175, 55, 0.3);
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      user-select: none;
+      border: none;
+      outline: none;
+      text-align: center;
+      text-decoration: none;
+    }
+    .contact-button:hover {
+      transform: scale(1.05);
     }
     .cards {
       display: flex;
@@ -45,107 +69,129 @@
       font-size: 0.95rem;
       margin-bottom: 1rem;
     }
-    .card a {
+    .lihat-button {
       display: inline-block;
-      color: #FFD700;
+      background-color: #D4AF37;
+      color: #000;
+      padding: 10px 20px;
+      border-radius: 999px;
       font-weight: bold;
-      text-decoration: none;
+      font-family: 'Poppins', sans-serif;
+      box-shadow: 0 0 10px rgba(212, 175, 55, 0.3);
       cursor: pointer;
+      transition: transform 0.2s ease;
+      text-align: center;
+      user-select: none;
+      margin-top: 0.5rem;
     }
-    .card .details {
+    .lihat-button:hover {
+      transform: scale(1.05);
+    }
+    .popup {
+      position: fixed;
+      top: 50%;
+      left: 20px;
+      right: 20px;
+      transform: translateY(-50%);
+      background-color: #101010;
+      color: #FFD700;
+      padding: 24px;
+      border-radius: 1rem;
+      box-shadow: 0 0 30px rgba(212, 175, 55, 0.6);
+      z-index: 1000;
       display: none;
-      margin-top: 1rem;
-      color: #aaa;
-      font-size: 0.85rem;
-      animation: fadeIn 0.3s ease-in-out;
+      max-width: 360px;
+      text-align: left;
+      margin: auto;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    .popup h3 {
+      margin-top: 0;
+    }
+    .popup button {
+      margin-top: 1rem;
+      padding: 10px 20px;
+      background-color: #D4AF37;
+      color: #000;
+      border: none;
+      border-radius: 999px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .popup button:hover {
+      background-color: #e5c85b;
     }
     footer {
       text-align: center;
       font-size: 0.8rem;
-      color: #555;
+      color: #777;
       padding: 2rem 1rem;
     }
-    
-    .contact-wrapper {
-  text-align: center;
-  margin-top: 1rem;
-}
-
-.contact-button {
-  display: inline-block;
-  background-color: #D4AF37;
-  color: #000;
-  padding: 12px 24px;
-  border-radius: 999px;
-  font-weight: bold;
-  font-family: 'Poppins', sans-serif;
-  box-shadow: 0 0 15px rgba(212, 175, 55, 0.3);
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  user-select: none;
-  border: none;
-  outline: none;
-  text-align: center;
-  text-decoration: none;
-}
-.contact-button:hover {
-  transform: scale(1.05);
-}
-.contact-button:focus,
-.contact-button:active {
-  outline: none;
-  box-shadow: none;
-}
-
-
   </style>
 </head>
 <body>
   <div class="hero">
     <img src="freelance.jpg" alt="Job Freelance Banner" />
   </div>
-<div class="contact-wrapper">
-  <div class="contact-button" onclick="window.open('https://wa.me/6281234567890', '_blank')">
-    ☎️ Hubungi Kami
-  </div>
-</div>
 
+  <div class="contact-wrapper">
+    <div class="contact-button" onclick="window.open('https://wa.me/6281234567890', '_blank')">
+      ☎️ Hubungi Kami
+    </div>
+  </div>
 
   <section class="cards">
     <div class="card">
       <h2>CTC Design 01</h2>
       <p>Template modern dan siap pakai.</p>
-      <a onclick="toggleDetail(0)">Lihat File</a>
-      <div class="details">📁 File: CTC Design 01<br/>Format: PPTX<br/>Ukuran: 1.2 MB<br/>Status: Gratis digunakan</div>
+      <div class="lihat-button" onclick="showPopup(0)">Lihat File</div>
     </div>
     <div class="card">
       <h2>CTC Pitchdeck</h2>
       <p>Presentasi menarik untuk klien freelance.</p>
-      <a onclick="toggleDetail(1)">Lihat File</a>
-      <div class="details">📁 File: CTC Pitchdeck<br/>Format: PDF<br/>Ukuran: 850 KB<br/>Status: Premium sample</div>
+      <div class="lihat-button" onclick="showPopup(1)">Lihat File</div>
     </div>
     <div class="card">
       <h2>CTC CV Kreatif</h2>
       <p>Resume interaktif yang menonjol dan profesional.</p>
-      <a onclick="toggleDetail(2)">Lihat File</a>
-      <div class="details">📁 File: CTC CV Kreatif<br/>Format: DOCX<br/>Ukuran: 400 KB<br/>Status: Siap edit</div>
+      <div class="lihat-button" onclick="showPopup(2)">Lihat File</div>
     </div>
   </section>
+
+  <div class="popup" id="popup">
+    <h3 id="popup-title">Judul File</h3>
+    <p id="popup-desc">Deskripsi file akan muncul di sini.</p>
+    <button onclick="hidePopup()">Tutup</button>
+  </div>
 
   <footer>
     © 2025 JOB FREELANCE — Dibuat dengan semangat & kopi ☕
   </footer>
 
   <script>
-    function toggleDetail(index) {
-      const details = document.querySelectorAll('.details');
-      details.forEach((el, i) => {
-        el.style.display = i === index ? (el.style.display === 'block' ? 'none' : 'block') : 'none';
-      });
+    const data = [
+      {
+        title: "CTC Design 01",
+        desc: "📁 Format: PPTX<br/>Ukuran: 1.2 MB<br/>Status: Gratis digunakan"
+      },
+      {
+        title: "CTC Pitchdeck",
+        desc: "📁 Format: PDF<br/>Ukuran: 850 KB<br/>Status: Premium sample"
+      },
+      {
+        title: "CTC CV Kreatif",
+        desc: "📁 Format: DOCX<br/>Ukuran: 400 KB<br/>Status: Siap edit"
+      }
+    ];
+
+    function showPopup(index) {
+      document.getElementById('popup-title').innerText = data[index].title;
+      document.getElementById('popup-desc').innerHTML = data[index].desc;
+      document.getElementById('popup').style.display = 'block';
+    }
+
+    function hidePopup() {
+      document.getElementById('popup').style.display = 'none';
     }
   </script>
 </body>
