--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #1E1D1B;
+      background-color: #23231F;
       color: #D4AF37;
     }
     .hero img {
@@ -20,7 +20,7 @@
     }
     .contact-wrapper {
       text-align: center;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
     }
     .contact-button {
       display: inline-block;
@@ -33,10 +33,7 @@
       box-shadow: 0 0 15px rgba(212, 175, 55, 0.3);
       cursor: pointer;
       transition: transform 0.3s ease;
-      user-select: none;
       border: none;
-      outline: none;
-      text-align: center;
       text-decoration: none;
     }
     .contact-button:hover {
@@ -51,10 +48,10 @@
     }
     .card {
       background-color: rgba(255, 255, 255, 0.03);
-      border: 1px solid rgba(255, 255, 255, 0.08);
+      border: 1px solid rgba(255, 255, 255, 0.06);
       padding: 2rem 1.5rem;
       border-radius: 1rem;
-      width: calc(100% - 2rem);
+      width: 90%;
       max-width: 360px;
       text-align: center;
       box-sizing: border-box;
@@ -73,16 +70,15 @@
       display: inline-block;
       background-color: #D4AF37;
       color: #000;
-      padding: 10px 20px;
+      padding: 10px 24px;
       border-radius: 999px;
       font-weight: bold;
       font-family: 'Poppins', sans-serif;
-      box-shadow: 0 0 10px rgba(212, 175, 55, 0.3);
       cursor: pointer;
       transition: transform 0.2s ease;
+      box-shadow: 0 0 12px rgba(212, 175, 55, 0.4);
       text-align: center;
-      user-select: none;
-      margin-top: 0.5rem;
+      border: none;
     }
     .lihat-button:hover {
       transform: scale(1.05);
@@ -90,19 +86,19 @@
     .popup {
       position: fixed;
       top: 50%;
-      left: 20px;
-      right: 20px;
+      left: 30px;
+      right: 30px;
       transform: translateY(-50%);
       background-color: #101010;
       color: #FFD700;
-      padding: 24px;
+      padding: 20px;
       border-radius: 1rem;
       box-shadow: 0 0 30px rgba(212, 175, 55, 0.6);
       z-index: 1000;
       display: none;
       max-width: 360px;
-      text-align: left;
       margin: auto;
+      text-align: left;
     }
     .popup h3 {
       margin-top: 0;
@@ -116,7 +112,6 @@
       border-radius: 999px;
       font-weight: bold;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
     .popup button:hover {
       background-color: #e5c85b;
