--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #23231F;
-      color: #D4AF37;
+      background-color: #020609;
+      color: #020609;
     }
     .hero img {
       width: 100%;
