--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #020609;
-      color: #020609;
+      background-color: #23231F;
+      color: #D4AF37;
     }
     .hero img {
       width: 100%;
@@ -35,6 +35,7 @@
       transition: transform 0.3s ease;
       border: none;
       text-decoration: none;
+      outline: none;
     }
     .contact-button:hover {
       transform: scale(1.05);
@@ -79,6 +80,7 @@
       box-shadow: 0 0 12px rgba(212, 175, 55, 0.4);
       text-align: center;
       border: none;
+      outline: none;
     }
     .lihat-button:hover {
       transform: scale(1.05);
@@ -112,6 +114,7 @@
       border-radius: 999px;
       font-weight: bold;
       cursor: pointer;
+      outline: none;
     }
     .popup button:hover {
       background-color: #e5c85b;
