--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #23231F;
+      background-color: #020609;
       color: #D4AF37;
     }
     .hero img {
