--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -10,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #020609;
+      background-color: #23231F;
       color: #D4AF37;
     }
     .hero img {
@@ -22,7 +23,8 @@
       text-align: center;
       margin-top: 1.5rem;
     }
-    .contact-button {
+    .contact-button,
+    .lihat-button {
       display: inline-block;
       background-color: #D4AF37;
       color: #000;
@@ -36,11 +38,14 @@
       border: none;
       outline: none;
       text-decoration: none;
+      appearance: none;
+      -webkit-appearance: none;
+      user-select: none;
     }
-    .contact-button:hover {
+    .contact-button:hover,
+    .lihat-button:hover {
       transform: scale(1.05);
     }
-
     .cards {
       display: flex;
       flex-direction: column;
@@ -68,34 +73,6 @@
       font-size: 0.95rem;
       margin-bottom: 1rem;
     }
-
-    .lihat-button {
-      display: inline-block;
-      background-color: #D4AF37;
-      color: #000;
-      padding: 10px 24px;
-      border-radius: 999px;
-      font-weight: bold;
-      font-family: 'Poppins', sans-serif;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-      box-shadow: 0 0 12px rgba(212, 175, 55, 0.4);
-      text-align: center;
-      border: none;
-      outline: none;
-    }
-
-    .lihat-button:hover {
-      transform: scale(1.05);
-    }
-
-    .lihat-button:focus,
-    .lihat-button:active {
-      outline: none;
-      background-color: #D4AF37;
-      box-shadow: 0 0 12px rgba(212, 175, 55, 0.4);
-    }
-
     .popup {
       position: fixed;
       top: 50%;
@@ -126,11 +103,11 @@
       font-weight: bold;
       cursor: pointer;
       outline: none;
+      appearance: none;
     }
     .popup button:hover {
       background-color: #e5c85b;
     }
-
     footer {
       text-align: center;
       font-size: 0.8rem;
@@ -145,26 +122,26 @@
   </div>
 
   <div class="contact-wrapper">
-    <div class="contact-button" onclick="window.open('https://wa.me/6281234567890', '_blank')">
+    <button class="contact-button" onclick="window.open('https://wa.me/6281234567890', '_blank')">
       ☎️ Hubungi Kami
-    </div>
+    </button>
   </div>
 
   <section class="cards">
     <div class="card">
       <h2>CTC Design 01</h2>
       <p>Template modern dan siap pakai.</p>
-      <div class="lihat-button" onclick="showPopup(0)">Lihat File</div>
+      <button class="lihat-button" onclick="showPopup(0)">Lihat File</button>
     </div>
     <div class="card">
       <h2>CTC Pitchdeck</h2>
       <p>Presentasi menarik untuk klien freelance.</p>
-      <div class="lihat-button" onclick="showPopup(1)">Lihat File</div>
+      <button class="lihat-button" onclick="showPopup(1)">Lihat File</button>
     </div>
     <div class="card">
       <h2>CTC CV Kreatif</h2>
       <p>Resume interaktif yang menonjol dan profesional.</p>
-      <div class="lihat-button" onclick="showPopup(2)">Lihat File</div>
+      <button class="lihat-button" onclick="showPopup(2)">Lihat File</button>
     </div>
   </section>
 
